[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/Sprint.gd" type="Script" id=1]
[ext_resource path="res://Themes/stamina_fg_yellow.tres" type="StyleBox" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Sprint" type="Node2D"]
light_mask = 0
script = ExtResource( 1 )

[node name="StaminaTimer" type="Timer" parent="."]
one_shot = true

[node name="ExhaustedDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
light_mask = 513
anchor_left = 0.5
anchor_right = 0.5
margin_left = -25.0
margin_right = 25.0
margin_bottom = 5.0
rect_min_size = Vector2( 50, 5 )
custom_styles/fg = ExtResource( 2 )
custom_styles/bg = SubResource( 1 )
step = 0.1
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="StaminaTimer" to="." method="_on_StaminaTimer_timeout"]
[connection signal="timeout" from="ExhaustedDelayTimer" to="." method="_on_ExhaustedDelayTimer_timeout"]
